# on-device_asr

./: .gitmodules  README.md
whisper.cpp_android/app/: build.gradle.kts
whisper.cpp_android/app/src/main/: AndroidManifest.xml
whisper.cpp_android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
whisper.cpp_android/app/src/main/java/com/example/my_app/: MainActivity.kt  WhisperBridge.kt  WhisperViewModel.kt
whisper.cpp_android/app/src/main/res/values-v23/: themes.xml
whisper.cpp_android/gradle/: libs.versions.toml
whisper.cpp_android/gradle/wrapper/: gradle-wrapper.properties
